--- a/Configurations/Config.properties
+++ b/Configurations/Config.properties
@@ -13,3 +13,6 @@ ConfirmPassword = 123456
 //LoginPage
 userName = priya1@gmail.com
 passWord = 123456
+
+//Add to cart
+productName = HTC One Mini Blue
